--- a/web/leprosorium.ru/scss/_variables.scss
+++ b/web/leprosorium.ru/scss/_variables.scss
@@ -4,4 +4,13 @@
  * Site specific variables
  */
 
+$background: $background;
 $base_color: $base_color;
+
+$text_color: $text_color;
+$link_color: $selected_bg;
+
+$selected_bg: $selected_bg;
+$selected_color: $background;
+
+$background_alt: #000;
